tests/error/poly_errors/polymorphic_entrypoint.py
from typing import Generic

from guppylang.decorator import guppy

F = guppy.const_var("F", "float")


@guppy.struct
class Struct(Generic[F]):
    pass


@guppy
def main(_: Struct[F]) -> float:
    return F


guppy.compile(main)
